.provarCaches/00D410000011HE0EAM/objects/rstk__PO_Print_Line__c.object
<CustomObject>
    <description>PO_Print_Line__c</description>
    <fields>
        <fullName>rstk__Balance_Due__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Description__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Extended_Amount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Line_Revision__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Rev</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ln</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__POPrintHeader__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POPrintHeader</label>
        <referenceTo>rstk__PO_Print_Header__c</referenceTo>
        <relationshipLabel>PO Print Lines</relationshipLabel>
        <relationshipName>lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__PrintLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Print Line</label>
        <referenceTo>rstk__poprintline__c</referenceTo>
        <relationshipLabel>PO Print Lines</relationshipLabel>
        <relationshipName>PO_Print_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Promised_Dock_Date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Promised Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__Qty_Decimals__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Decimals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Quantity__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ShipTo_Address__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ShipTo Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__UOM__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Unit_Price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Vendor_Item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__linetype__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>linetype</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PO Print Line</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Print_Line</fullName>
        <columns>NAME</columns>
        <columns>rstk__linetype__c</columns>
        <columns>rstk__POPrintHeader__c</columns>
        <columns>rstk__ShipTo_Address__c</columns>
        <columns>rstk__PrintLine__c</columns>
        <columns>rstk__Line_Revision__c</columns>
        <columns>rstk__Item__c</columns>
        <columns>rstk__Description__c</columns>
        <columns>rstk__Quantity__c</columns>
        <columns>rstk__Balance_Due__c</columns>
        <columns>rstk__Unit_Price__c</columns>
        <columns>rstk__Extended_Amount__c</columns>
        <columns>rstk__Promised_Dock_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Print Line</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>PO Print Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Print Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>